--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ osx_image: xcode8.2
 before_install:
   - gem install fastlane -NV
 script:
-  - ./fastlane test
+  - ./fastlane test_macos
+  - ./fastlane test_ios
