--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ osx_image: xcode8.2
 before_install:
   - gem install fastlane -NV
 script:
-  - ./fastlane test_macos
-  - ./fastlane test_ios
+  - ./fastlane test
