--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@ Carthage/Build
 .build/
 
 # Fastlane
-.fastlane/report.xml
-.fastlane/test_output
-.fastlane/README.md
+fastlane/report.xml
+fastlane/test_output
+fastlane/README.md
